# Mineradio-Tauri

./: .gitignore  CONTRIBUTING.md  README.md  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  protected-release.yml  release.yml
apps/desktop/src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop-lyrics.json  login-windows.json
apps/desktop/src-tauri/examples/: verify_updater_signature.rs
apps/desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  sidecar.rs
apps/web/: AGENTS.md
apps/web/src/: bun-test.d.ts  main.tsx  styles.css
docs/: performance-overhead-comparison.md  release-runbook.md
docs/migration/: BASELINE_FREEZE_RECORD.md  CAPABILITY_PARITY_CHECKLIST.md  DEFERRED_CAPABILITIES.md  LICENSE_GATE.md
docs/migration/baseline/: BASELINE_METADATA.2026-06-27.json  TEST_FIXTURES.2026-06-27.md
docs/superpowers/plans/: 2026-07-08-home-right-rail.md  (+2 more)
scripts/: check-frontend-debug-logs.mjs  check-installer-policy.mjs  check-installer-policy.test.mjs  check-license-allowlist.mjs  check-license-allowlist.test.mjs  check-main-flow-policy.mjs  check-main-flow-policy.test.mjs
scripts/ci/: create-updater-manifest.mjs  create-updater-manifest.test.ts  publish-release.mjs  publish-release.test.ts  release-provenance.mjs  release-provenance.test.ts  verify-release-assets.mjs  verify-release-assets.test.ts  verify-release-version.mjs  verify-release-version.test.ts
scripts/perf/: compare-overhead.mjs
sidecars/api/: AGENTS.md
verification/: commit-msg-main-flow-closure.txt
(+117 files in other folders)
