[package]
name = "mineradio-tauri"
version = "0.1.0"
description = "Mineradio Tauri rewrite shell"
authors = ["Mineradio"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "mineradio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
