[package]
name = "mineradio-tauri"
version = "0.1.0"
description = "MineRadio-Tauri desktop music player"
authors = ["MineRadio-Tauri contributors"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "mineradio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "=2.3.2"
tauri-plugin-single-instance = "=2.4.2"
tauri-plugin-updater = "=2.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
time = { version = "0.3", features = ["formatting"] }
rusqlite = { version = "0.40", features = ["bundled"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
